fixed content overflow in print resume (skills/quals)

--- a/src/resume_builder/util/resume_print.css
+++ b/src/resume_builder/util/resume_print.css
@@ -19,3 +19,7 @@ table {
     left: initial;
     right: 4pt;
 }
+
+#skills-quals+table {
+    width: 96%;
+}
